4. Найти утечку памяти. [#504882 # [#504882]]